// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en componente GitExpertApp Mostrar componente 1`] = `
<Fragment>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en componente GitExpertApp debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GitExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GitGrid
      category="Dragon ball"
      key="Dragon ball"
    />
    <GitGrid
      category="One punch"
      key="One punch"
    />
  </ol>
</Fragment>
`;
